--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,10 @@ flutter_launcher_icons:
 
 flutter_native_splash:
   color: "#FF6A9C"
-  image: assets/images/splash_icon.png
+  image: assets/images/icon_splash.png
 
   android_12:
-    image: assets/images/splash_icon.png
-    icon_background_color: "#FF6A9C"
+    image: assets/images/icon_splash.png
+    icon_background_color: "#ffffff"
 
   web: false
