--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   photo_view: ^0.15.0
   google_fonts: ^6.2.0
   connectivity_plus: ^6.1.1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
